[package]
name = "gcp-snap-crab"
version = "0.1.0"
edition = "2021"
authors = ["Mikolaj Rutecki", "Mikolaj Rutecki <ruteckimikolaj+crates.io@gmail.com>"]
description = "A minimalist, powerful, terminal-based GCP backup and restore tool written in Rust"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/ruteckimikolaj/gcp-snap-crab"
homepage = "https://github.com/ruteckimikolaj/gcp-snap-crab"
keywords = ["gcp", "backup", "restore", "terminal", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "assets/*",
    "LICENSE",
    "README.md",
]

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
unicode-width = "0.1"

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update && apt-get --assume-yes install libasound2-dev:arm64 libssl-dev:arm64 pkg-config",
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update && apt-get --assume-yes install libasound2-dev libssl-dev pkg-config",
]

[badges]
maintenance = { status = "actively-developed" }